WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304266
ASSERTION FAILED: resolvedMainSize >= 0 in RenderFlexibleBox::computeFlexItemMinMaxSizes
https://bugs.webkit.org/show_bug.cgi?id=304266
Summary
ASSERTION FAILED: resolvedMainSize >= 0 in RenderFlexibleBox::computeFlexItem...
Sammy Gill
Reported
2025-12-16 12:35:41 PST
rdar://162072271
Attachments
Add attachment
proposed patch, testcase, etc.
Sammy Gill
Comment 1
2026-01-07 10:09:37 PST
rdar://167701366
Sammy Gill
Comment 2
2026-01-07 10:10:23 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56205
EWS
Comment 3
2026-01-07 18:55:04 PST
Committed
305249@main
(67c3e5ec34ea): <
https://commits.webkit.org/305249@main
> Reviewed commits have been landed. Closing PR #56205 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug